--- a/statistics.html
+++ b/statistics.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
+<h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -141,7 +141,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stat.uw.edu/assistant-professor'>Assistant Professor | University of Washington Department of Statistics</a></h5> 
+<h5><a href='https://stat.uw.edu/assistant-professor'>Assistant Professor | University of Washington Department of Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -153,7 +153,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://uis.applytojob.com/apply/vuRjpo7288/Security-Risk-Assessment-C-Software-Application'>Security risk assessment - C# Software application - UNESCO Institute for Statistics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/vuRjpo7288/Security-Risk-Assessment-C-Software-Application'>Security risk assessment - C# Software application - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -191,7 +191,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -199,7 +199,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -238,7 +238,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 validation plan and blinded data review; - Performs SAS programming to 
 generate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=ddb1578c1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -269,7 +269,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://decipherbio.applytojob.com/apply/mYGJyt6fl5/Biostatistician'>Biostatistician - Decipher Biosciences - Career Page</a></h5> 
+<h5><a href='http://decipherbio.applytojob.com/apply/mYGJyt6fl5/Biostatistician'>Biostatistician - Decipher Biosciences - Career Page</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -309,7 +309,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
+<h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -475,7 +475,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/8C1CDAF5CE'>TFS - Jobs: Principal Statistical Programmer - Homebased - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/8C1CDAF5CE'>TFS - Jobs: Principal Statistical Programmer - Homebased - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -483,7 +483,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/sr-statistician-68736'>Sr Statistician - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/sr-statistician-68736'>Sr Statistician - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -491,7 +491,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
