--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/midsouthrehabservices/job/zmdgikxko4h6z3brpyp7yred7h'>PRN | SLP | Speech-Language Pathologist | Mid South Rehab Services, Inc.</a></h5> 
+<p><span class="badge badge-light">Columbia, MS</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999698307093-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -126,7 +130,7 @@
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4490968002'>Job Application for Speech Language Pathologist (SLP) - Home Health, Full-Time at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4490968002'>Job Application for Speech Language Pathologist (SLP) - Home Health, Full-Time at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Prescott, AZ</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -155,7 +159,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -163,7 +167,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -194,7 +198,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Conway, SC</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -218,7 +222,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999681998021-speech-language-pathology-assistant-outreach-coordinator'>Hearing and Speech Center of Florida Speech-Language Pathology Assistant-OUTREACH COORDINATOR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -305,7 +309,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -325,7 +329,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -333,7 +337,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States  Naples, FL</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -345,7 +349,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
+<h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -423,7 +427,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Martinsburg, West Virginia</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/fjb9wti3xsb8qqubfo9giayu4e'>Speech Language Pathologist | CTC Careers</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/ctc/job/fjb9wti3xsb8qqubfo9giayu4e'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Douglasville, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -431,7 +435,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">St. Augustine, FL</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/speech-language-pathologist-prn-in-dekalb-county-dA8-ae5vGr6BHaaKiznY58'>Speech Language Pathologist - (PRN in Dekalb County) #1159 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/speech-language-pathologist-prn-in-dekalb-county-dA8-ae5vGr6BHaaKiznY58'>Speech Language Pathologist - (PRN in Dekalb County) #1159 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -448,10 +452,6 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p>Posted on: 2019-10-02</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696074895-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-02</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696075796-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
